2002-04-07  Than Ngo  <than@redhat.com>

	* src/netconfpkg/NCisdnhardware.py:
	* add vendor_id and device_id for Elsa Quickstep 1000 PnP

2002-04-06  ra  <ra@redhat.com>

	* po/is.po: in progress

2002-04-05  Harald Hoyer  <harald@redhat.com>

	* src/netconfpkg/NCDeviceList.py:
	removed print

	* configure.in: bumped version

	* src/netconfpkg/ConfPAP.py:
	better begin/endline algo

	* src/netconfpkg/NCDeviceList.py:
	wvdial sections were deleted after the device was saved

	* src/netconfpkg/NCDialup.py:
	create new sections in wvdial.conf, if the do not exist

2002-04-04  Trond Eivind Glomsrod  <teg@redhat.com>

	* configure.in: Typo

	* configure.in:
	Add Turkish and zh_TW

	* redhat-config-network.spec.in:
	Bump

2002-04-04  nilgun  <nilgun@redhat.com>

	* po/tr.po: ok

2002-04-04  Hung-Pin Wu  <hpwu@redhat.com>

	* po/zh_TW.po:
	Newly added translation.

2002-04-03  Harald Hoyer  <harald@redhat.com>

	* src/netconfpkg/gui/dialupconfig.py:
	inserted _('in') and _('out')

	* src/maindialog.glade:
	multiple host selection

	* src/netconfpkg/Control.py:
	removed all gnome/gtk imports

	* src/netconf.py:
	added parent dialog argument to devErrorDialog() calls

	* src/neat-control.py:
	added parent dialog argument to devDialogError() calls

	* src/neat-control.py, src/netconf.py:
	errorDialog() -> devErrorDialog()

	* src/netconfpkg/gui/GUI_functions.py:
	added idle_func()

	* src/netconfpkg/NCProfileList.py:
	check for directories if reading profiles (#60016)

	* configure.in: bumped version

	* src/netconfpkg/NCHardwareList.py:
	generalized hw.Type

	* src/netconf.py:
	can delete now multiple hosts (#57059)

	* src/maindialog.glade:
	removed "Domain", cause it is unused

	* src/netconfpkg/NCProfileList.py:
	if the hostname changed, set it system wide (#55746)

	* src/netconfpkg/NCDevice.py:
	delete a boolean key, rather than set it to 'no' (#62127)

	* src/netconfpkg/NCDevice.py:
	chmod generic_yesno_dialog answer now handled correctly (#62127)
