@@ -1,3 +1,11 @@
+2002-04-08  Harald Hoyer  <harald@redhat.com>
+
+	* redhat-config-network-0.9.23-rp3-font.patch:
+	correct netmon font problem
+
+	* src/glade-strings.c, src/netconfpkg/gui/Makefile.am, po/fr.po, po/is.po, po/it.po, po/ja.po, po/ko.po, po/no.po, po/pt.po, po/redhat-config-network.pot, po/ru.po, po/sv.po, po/tr.po, po/zh_CN.GB2312.po, po/zh_TW.Big5.po, po/zh_TW.po, src/Makefile.am, ChangeLog, po/cs.po, po/da.po, po/de.po, po/es.po, po/Makefile.in.in, po/POTFILES.in, redhat-config-network.spec.in:
+	more POTFILES and made 'make srpm' work again
+
 2002-04-07  Than Ngo  <than@redhat.com>
 
 	* src/netconfpkg/NCisdnhardware.py:
